--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,11 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
+
               "src/styles.css"
             ],
+          
             "scripts": []
           },
           "configurations": {
@@ -94,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "9c8daa8b-fe62-4a2e-a463-81bb27738e1a"
   }
 }
